[gd_scene load_steps=5 format=2]

[ext_resource path="res://assest/background_clear.png" type="Texture" id=1]
[ext_resource path="res://assest/font/pixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/EndScene.gd" type="Script" id=3]
[ext_resource path="res://assest/button.png" type="Texture" id=4]

[node name="EndScene" type="Node2D"]
script = ExtResource( 3 )
dialogPath = "res://end.json"

[node name="background_clear" type="Sprite" parent="."]
position = Vector2( 179.991, 320.018 )
texture = ExtResource( 1 )

[node name="StoryLable" type="RichTextLabel" parent="background_clear"]
margin_left = -140.0
margin_top = -131.0
margin_right = 142.0
margin_bottom = 272.0
custom_fonts/normal_font = ExtResource( 2 )
text = "By Growtopia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="background_clear"]

[node name="skip" type="TextureButton" parent="."]
margin_left = 279.883
margin_top = 13.4666
margin_right = 346.883
margin_bottom = 88.4666
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skipText" type="Label" parent="skip"]
margin_left = 14.8108
margin_top = 22.5946
margin_right = 52.8108
margin_bottom = 46.5946
custom_fonts/font = ExtResource( 2 )
text = "跳过"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="skip" to="." method="_on_skip_pressed"]
